@@ -130,7 +130,7 @@
             id=menu-editor-edit
             title= _ "Edit"
             image=lite
-            items=undo,redo,editor-cut,editor-copy,editor-paste,editor-export-selection-coords,editor-select-all,editor-select-inverse,editor-select-none, editor-selection-fill,editor-selection-rotate,editor-selection-flip, editor-selection-generate,editor-selection-randomize, editor-clipboard-rotate-cw,editor-clipboard-rotate-ccw, editor-clipboard-flip-horizontal,editor-clipboard-flip-vertical
+            items=undo,redo,editor-cut,editor-copy,editor-paste,editor-export-selection-coords,editor-select-all,editor-select-inverse,editor-select-none, editor-selection-fill,editor-selection-rotate,editor-selection-flip, editor-selection-generate,editor-selection-randomize
             rect="+2,=,+100,="
             xanchor=fixed
             yanchor=fixed
@@ -157,9 +157,9 @@
         [/menu]
 
         [menu]
-            id=menu-editor-selection
+            id=menu-editor-paste-context
             is_context_menu=true
-            items=menu-editor-starting-position,undo,redo,editor-cut,editor-copy,editor-paste,editor-selection-fill,editor-selection-rotate,editor-selection-flip,editor-selection-generate,editor-selection-randomize
+            items=editor-paste,editor-clipboard-rotate-cw,editor-clipboard-rotate-ccw,editor-clipboard-flip-horizontal,editor-clipboard-flip-vertical
         [/menu]
 
         [mini_map]
@@ -176,7 +176,7 @@
             image=draw_button_editor
             items=editor-tool-paint
             # wmllint: local spelling left/right
-            tooltip= _ "Use left/right mouse button to draw fore-/background terrain. Hold Shift to paint base layer only."
+            tooltip= _ "Use left/right mouse button to draw fore-/background terrain. Hold Shift to paint base layer only. Ctrl+click to sample terrain under cursor."
             tooltip_name_prepend=yes
             ref=top-right-panel
             #harcoded since the brushes are above, which are hardcoded in src/editor/editor_layout.cpp
@@ -189,7 +189,7 @@
             image=flood_button_editor
             items=editor-tool-fill
             # wmllint: local spelling fore-/background
-            tooltip= _ "Use left/right mouse button to draw fore-/background terrain. Hold Shift to paint base layer only."
+            tooltip= _ "Use left/right mouse button to draw fore-/background terrain. Hold Shift to paint base layer only. Ctrl+click to sample terrain under cursor."
             tooltip_name_prepend=yes
             rect="+6,=,+24,+24"
             xanchor=right
