@@ -14,6 +14,8 @@ Version 1.6.1:
      are not incapacitated (for example, it now ignores stoned units )
  * Editor2:
    * New feature: exporting of selection coordinates to system clipboard
+   * Moved the clipboard actions to a context menu available in paste mode
+   * Added a terrain sampler feature -- ctrl+click when in paint or fill mode 
    * Made "wesnoth -e FILE" work like "wesnoth -e --load FILE" (load the map)
    * Made "wesnoth -e --load DIR" (and consequently "wesnoth -e DIR") set
      DIR as the default map directory for the current session, and start with 
